Make party lifecycle and chat functional